syntax = "proto3";

option go_package = "github.com/rmarsu/auth_service";

service AuthService {
     rpc Register (RegisterRequest) returns (RegisterResponse) {}
     rpc Login (LoginRequest) returns (LoginResponse) {}
     rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse) {}
}

message RegisterRequest {
     string username = 1;
     string email = 2;
     string password = 3;
}

message RegisterResponse {
     int64 id = 1;
}

message LoginRequest {
     string email = 1;
     string password = 2;
     int64 appId = 3;
}

message LoginResponse {
     string token = 1;
}

message IsAdminRequest {
     int64 id = 1;
}

message IsAdminResponse {
     bool is_admin = 1;
}